// SPDX-FileCopyrightText: 2025 Mathis Logemann <mathis@quite.rocks>
//
// SPDX-License-Identifier: MIT

syntax = "proto3";

package quite.proto;

import "quite/proto/types.proto";

message MethodCall {
  string method_name = 1;
  repeated Value argument = 2;
};

message MethodReturnValue {
  optional Value value = 1;
}
